--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
-MONGO=mongodb+srv://NotTheRightGuy:6LItVYlwu86x8HTi@cluster0.gf1otxj.mongodb.net/?retryWrites=true&w=majority
+MONGO=mongodb+srv://NotTheRightGuy:koGknhAyOhvl2zz7@cluster0.gf1otxj.mongodb.net/?retryWrites=true&w=majority
+PASSWORD=koGknhAyOhvl2zz7
