--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
