--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
     "@clerk/clerk-react": "^4.30.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "axios": "^1.6.7",
+    "cloudinary": "^2.0.1",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
