--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,1 @@
-MONGO=mongodb+srv://NotTheRightGuy:koGknhAyOhvl2zz7@cluster0.gf1otxj.mongodb.net/?retryWrites=true&w=majority
-PASSWORD=koGknhAyOhvl2zz7
+MONGODB_URI=mongodb+srv://NotTheRightGuy:meowmeow@deadman.wofkioz.mongodb.net/?retryWrites=true&w=majority
