--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
